<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds"
    tools:context="org.jbpm.mobileclient.processView.ProcessDefViewActivity"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="1"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/headGrid">

        <TextView
            android:layout_width="264dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details"
            android:id="@+id/detailsText" />

        <Button
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="@string/closeButton"
            android:id="@+id/closeButton"
            android:layout_gravity="right"
            android:layout_row="0"
            android:shape="rectangle"
            android:layout_column="1" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/header">

        <TextView
            android:layout_width="159dp"
            android:layout_height="88dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/userId"
            android:id="@+id/userId"
            android:layout_gravity="left|right"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="329dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/example"
            android:id="@+id/username"
            android:layout_gravity="left|center" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:rowCount="6"
        android:columnCount="3"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/gridData">


        <TextView
            android:layout_width="193dp"
            android:layout_height="46dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/definition_Id"
            android:id="@+id/definitionId"
            android:layout_gravity="right"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="33dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=":"
            android:id="@+id/textView18"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="197dp"
            android:layout_height="70dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/example"
            android:id="@+id/getId"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:layout_width="177dp"
            android:layout_height="68dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/definitionName"
            android:id="@+id/definitionNameId"
            android:layout_gravity="right"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=":"
            android:id="@+id/textView19"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="199dp"
            android:layout_height="70dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/example"
            android:lines="2"
            android:maxLines="2"
            android:id="@+id/definitionName"
            android:layout_gravity="center|left"
            android:layout_row="1"
            android:layout_column="2"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="74dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Deployment"
            android:id="@+id/DeploymentId"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=":"
            android:id="@+id/textView17"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="201dp"
            android:layout_height="70dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/example"
            android:lines="2"
            android:maxLines="2"
            android:id="@+id/getDepolyment"
            android:layout_gravity="center|left"
            android:layout_row="2"
            android:layout_column="2" />

        <TextView
            android:layout_width="178dp"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Process_Variables"
            android:id="@+id/processVariablesId"
            android:layout_gravity="right|center"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=":"
            android:id="@+id/textView20"
            android:layout_row="3"
            android:layout_column="1" />

        <ListView
            android:layout_width="197dp"
            android:layout_height="203dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/example"
            android:lines="2"
            android:maxLines="2"
            android:id="@+id/processVariables"
            android:layout_gravity="center|left"
            android:dividerHeight="2dp"
            android:layout_row="3"
            android:layout_column="2" />
    </GridLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_instance"
        android:id="@+id/ButtonInsStart" />

</LinearLayout>
