<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.jbpm.mobileclient.DashboardActivity"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="1"
        android:columnCount="3"
        android:id="@+id/gridLayout3" >

        <TextView
            android:layout_width="298dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Process &amp; Task Dashboard"
            android:id="@+id/textView4"
            android:layout_columnSpan="2"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button3"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:layout_gravity="right" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:rowCount="1"
        android:columnCount="2"
        android:id="@+id/gridLayout3" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/userNameId"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="180dp"
            android:layout_height="79dp"
            android:layout_column="1"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left"
            android:text="@string/example" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</LinearLayout>
